--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <!-- <link href="C:\Users\Elliot\Documents\bootstrap-3.3.7-dist\css\bootstrap.min.css" rel="stylesheet"> -->
      <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
      <link href='custom.css' rel='stylesheet' type='text/css'>
-    <title>Bootstrap 101 Template</title>
+    <title>Find Melee</title>
 
        <style>
       #map {
@@ -17,11 +17,16 @@
   </head>
   <body>
   <div id="container"></div>
-    <h1> Test </h1>
+    <h1> Find Melee </h1>
   </div>
   <div id="map"></div>
   <div id="row"></div>
-    <p1> Contact info here </p1>
+    <div id ="column"></div>
+      <a href="https://twitter.com/Ellio_Tan">Twitter</a>
+    </div>
+    <div id="column"><div>
+      <a href="https://findmelee.wordpress.com/">Blog</a>
+      </div>
   </div>
 
     
