--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 
   <div class='container'>
     <div class="row">
-        <div class="col-md-4"> 
+        <div class="col-sm-4"> 
           <a href="https://twitter.com/Ellio_Tan">Twitter</a>
         </div>
-         <div class="col-md-4"> 
+         <div class="col-sm-4"> 
           <a href="https://findmelee.wordpress.com/">Blog</a>
         </div>
-        <div class="col-md-4"> Made by Elliot Tan </div>
+        <div class="col-sm-4"> Made by Elliot Tan </div>
     </div>
   </div>
 
