--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title> Elliot Tan Home Page </title>
 </head>
 <body>
-	<a href='./melee_map/index.html'>Melee Map</a>
-	<a href='./stl_app/index.html'> Laval STL Bus Finder</a>
+	<p>	
+		<a href='./melee_map/index.html'>Melee Map</a><br/>
+		<a href='./stl_app/index.html'> Laval STL Bus Finder</a>
+	</p>
 </body>
