Map changed to just Montreal

--- a/melee_map/index.html
+++ b/melee_map/index.html
@@ -7,7 +7,7 @@
      <link href='custom.css' rel='stylesheet' type='text/css'>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <title>Find Melee</title>
+    <title>Melee Montreal</title>
 
        <style>
       #map {
@@ -20,12 +20,12 @@
   <body>
   
   <div class="header"> 
-    <h1> Find Melee </h1>
+    <h1> Where To Play Super Smash Bros. Melee in Montreal </h1>
     </div>
-  <div id="row">
+ <!-- <div id="row">
       <input id="address" type="">
       <input id="submit" type="button" value="Enter your location">
-  </div>
+  </div><-->
   <div id="map"></div>
 a
   <div class='container'>
