--- a/index.html
+++ b/index.html
@@ -13,4 +13,5 @@
 		<a href='./melee_map/index.html'>Melee Map</a><br/>
 		<a href='./stl_app/index.html'> Laval STL Bus Finder</a>
 	</p>
+  <p> "help" </p>
 </body>
