--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
 	<p>	
-		<a href='./melee_map/index.html'>Melee Map</a><br/>
+		<a href='./melee_map/index.html'>Where to find SSBM in Montreal</a><br/>
 		<a href='./stl_app/index.html'> Laval STL Bus Finder</a>
 	</p>
-  <p> "help" </p>
 </body>
