Added D3JS demo from class

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
 	<p>	
 		<a href='./melee_map/index.html'>Where to find SSBM in Montreal</a><br/>
-		<a href='./stl_app/index.html'> Laval STL Bus Finder</a>
+		<a href='./stl_app/index.html'> Laval STL Bus Locator</a><br/>
+    <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a>
 	</p>
 </body>
