--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 		<a href='./melee_map/index.html'>Where to find SSBM in Montreal</a><br/>
 		<a href='./stl_app/index.html'> Laval STL Bus Locator</a><br/>
     <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a>
+    *Note that this link does not work on Chrome
+
 	</p>
 </body>
