--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 	<p>	
 		<a href='./melee_map/index.html'>Where to find SSBM in Montreal</a><br/>
 		<a href='./stl_app/index.html'> Laval STL Bus Finder</a>
+    <a href='./D3Practice/d3js_circlestack.html'> d3js Practice </a>
 	</p>
 </body>
