Changed box size algorithm

--- a/D3Practice/d3js_circlestack.html
+++ b/D3Practice/d3js_circlestack.html
@@ -22,7 +22,9 @@
 	<button onclick="reset()"> Reset </button>
 
 	<script type ="text/javascript">
-		
+		/*d3.select("body").transition()
+			.delay(1000)
+			.style("background-color","yellow"); */
 	</script>
 
 </body>
