--- a/NRGI_projects/index.html
+++ b/NRGI_projects/index.html
@@ -12,7 +12,7 @@
        <style>
       #map {
         height: 500px;
-        width: 80%;
+        width: 90%;
        }
     </style>
 
@@ -27,7 +27,6 @@
       <input id="submit" type="button" value="Enter your location">
   </div><-->
   <div id="map"></div>
-  <div id="legend"><h3>Legend</h3></div>
 
   <div class='container'>
     <div class="row">
@@ -35,7 +34,7 @@
     </div>
   </div>
 
-
+<iframe width="500" height="300" scrolling="no" frameborder="no" src="https://fusiontables.google.com/embedviz?q=select+col14+from+18glfaTlK1oZQBL5zixCzCjVDBy2fif6bxFF9uLmx&amp;viz=MAP&amp;h=false&amp;lat=57.296581116544466&amp;lng=156.19988704999994&amp;t=1&amp;z=2&amp;l=col14&amp;y=2&amp;tmplt=2&amp;hml=GEOCODABLE"></iframe>
  
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
