--- a/NRGI_projects/index.html
+++ b/NRGI_projects/index.html
@@ -30,7 +30,7 @@
 
   <div class='container'>
     <div class="row">
-        <div class="col-sm-4"> Made by Elliot Tan </div>
+        <div class="col-sm-4">  </div>
     </div>
   </div>
 
