--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
 		<a href='./stl_app/index.html'> Laval STL Bus Locator</a><br/>
     <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a>
+    <a href='.json_jquery_practice/index.html'> jquery Json Practice </a>
 
 	</p>
 </body>
