--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <a href='./D3Practice/d3js_circlestack.html'> d3js Practice </a><br/>
 
 		<a href='./stl_app/index.html'> Laval STL Bus Locator</a><br/>
-    <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a>
-    <a href='.json_jquery_practice/jsonTest.html'> jquery Json Practice </a>
+    <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a><br/>
+    <a href='./json_jquery_practice/jsonTest.html'> jquery Json Practice </a>
 
 	</p>
 </body>
