--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
   <link href='custom.css' rel='stylesheet' type='text/css'>
   <title> Elliot Tan Home Page </title>
 </head>
-<body>
-	<p>	
-		<a href='./melee_map/index.html'>Where to find SSBM in Montreal</a><br/>
-	    	<a href='./D3Practice/d3js_circlestack.html'> d3js Practice </a><br/>
-		<a href='./stl_app/index.html'> Laval STL Bus Locator</a><br/>
-   	 	<a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a><br/>
-    		<a href='./meleeDashboards/NorCal.html'> SSBM Dashboards - NorCal Region </a>
+<body>  
+    <h1> <a href='./stl_app/index.html'> City of Laval STL Bus Locator</a> </h1>
+	  <h1> d3.js practice </br> 
+    - <a href='./D3Practice/d3js_circlestack.html'> Create a stack of circles</a> </br>
+    - <a href ='./D3Practice/randomPieChart.html'> Pie chart with random values and colours</a>
+  </h1>
+  	<h1> <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a> </h1>
+    <h1> <a href='.NRGI_projects/index.html'> Map of Oil and Gas extraction projects worldwide </a> </h1>
+    <h1> <a href='./meleeDashboards/NorCal.html'> SSBM Dashboards - NorCal Region </a> </h1>
+    <h1> <a href='./melee_map/index.html'>Where to find SSBM in Montreal</a> </h1>
 
-	</p>
+	
 </body>
