--- a/index.html
+++ b/index.html
@@ -8,16 +8,20 @@
   <link href='custom.css' rel='stylesheet' type='text/css'>
   <title> Elliot Tan Home Page </title>
 </head>
-<body>  
-    <h1> <a href='./stl_app/index.html'> City of Laval STL Bus Locator</a> </h1>
-	  <h1> d3.js practice </br> 
-    - <a href='./D3Practice/d3js_circlestack.html'> Create a stack of circles</a> </br>
-    - <a href ='./D3Practice/randomPieChart.html'> Pie chart with random values and colours</a>
-  </h1>
-  	<h1> <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a> </h1>
-    <h1> <a href='.NRGI_projects/index.html'> Map of Oil and Gas extraction projects worldwide </a> </h1>
-    <h1> <a href='./meleeDashboards/NorCal.html'> SSBM Dashboards - NorCal Region </a> </h1>
-    <h1> <a href='./melee_map/index.html'>Where to find SSBM in Montreal</a> </h1>
-
-	
+<body> 
+   <h2> Elliot Tan's Projects and Practice </h2>
+   <div class = "links">
+      <p> <a href='./stl_app/index.html'> City of Laval STL Bus Locator</a> </p>
+  	  <p> <a href='./D3Practice/d3js_circlestack.html'> Create a stack of circles</a> </p>
+      <p> <a href ='./D3Practice/randomPieChart.html'> Pie chart with random values and colours</a></p>
+    	<p> <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a> </p>
+      <p> <a href='.NRGI_projects/index.html'> Map of Oil and Gas extraction projects worldwide </a> </p>
+      <p> <a href='./meleeDashboards/NorCal.html'> Super Smash Bros. Melee Dashboards - NorCal Region </a> </p>
+      <p> <a href='./melee_map/index.html'>Where to find Super Smash Bros. Melee in Montreal</a> </p>
+  </div>
+  <div class = "contact">
+     <a href='https://www.linkedin.com/in/elliot-tan-90a916116/'>
+        <img src = './dataFiles/linkedin.png'>
+      </a>
+    <a href = './dataFiles./Resume.pdf'> Resume </a>
 </body>
