--- a/index.html
+++ b/index.html
@@ -23,5 +23,5 @@
      <a href='https://www.linkedin.com/in/elliot-tan-90a916116/'>
         <img src = './dataFiles/linkedin.png'>
       </a>
-    <a href = './dataFiles./Resume.pdf'> Resume </a>
+    <a href = './dataFiles/Resume.pdf'> Resume </a>
 </body>
