--- a/meleeDashboards/NorCal.html
+++ b/meleeDashboards/NorCal.html
@@ -30,7 +30,7 @@
 
  
 
-  d3.csv("https://ellio-tan.github.io/dataFiles/norcalPR2.csv", function(error, data){
+  d3.csv("https://elliot-tan.github.io/dataFiles/norcalPR2.csv", function(error, data){
   	
   	// Get list of players
   	var seriesName = d3.keys(data[0]).filter(function(key){
