--- a/D3Practice/randomPieChart.html
+++ b/D3Practice/randomPieChart.html
@@ -28,7 +28,7 @@
 <body>
 <svg width="960" height="500"></svg> <!-- set svg tag -->
 <script type="text/javascript">
-/ This is practice in creating a pie chart with random colours and values, with labels
+// This is practice in creating a pie chart with random colours and values, with labels
 //Helper functions/ dataset 
 
 //Round random number
