--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   	  <p> <a href='./D3Practice/d3js_circlestack.html'> Create a stack of circles</a> </p>
       <p> <a href ='./D3Practice/randomPieChart.html'> Pie chart with random values and colours</a></p>
     	<p> <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a> </p>
-      <p> <a href='.NRGI_projects/index.html'> Map of Oil and Gas extraction projects worldwide </a> </p>
+      <p> <a href='./NRGI_projects/index.html'> Map of Oil and Gas extraction projects worldwide </a> </p>
       <p> <a href='./meleeDashboards/NorCal.html'> Super Smash Bros. Melee Dashboards - NorCal Region </a> </p>
       <p> <a href='./melee_map/index.html'>Where to find Super Smash Bros. Melee in Montreal</a> </p>
   </div>
