Update and rename NorCal.html to norcal.html

--- a/meleeDashboards/norcal.html
+++ b/meleeDashboards/norcal.html
@@ -2,7 +2,7 @@
 <head>
 <title> NorCal PR </title>
 	<meta charset="UTF-8" />
-	<link href='custom.css' rel='stylesheet' type='text/css'>
+	<link href='norcal.css' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <select id = "playerName"></select>
