--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-  <link href='custom.css' rel='stylesheet' type='text/css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta charset="utf-8" />
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
+  <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
+  <link href='custom.css' rel='stylesheet' type='text/css'/>
   <title> Elliot Tan Home Page </title>
 </head>
 <body> 
-   <h2> Elliot Tan's Projects and Practice </h2>
-   <div class = "links">
-      <p> <a href='./stl_app/index.html'> City of Laval STL Bus Locator</a> </p>
-  	  <p> <a href='./D3Practice/d3js_circlestack.html'> Create a stack of circles</a> </p>
-      <p> <a href ='./D3Practice/randomPieChart.html'> Pie chart with random values and colours</a></p>
-    	<p> <a href='./geog407_d3js/index.html'> GEOG 407 D3JS Demo </a> </p>
-      <p> <a href='./NRGI_projects/index.html'> Map of Oil and Gas extraction projects worldwide </a> </p>
-      <p> <a href='./meleeDashboards/norcal.html'> Super Smash Bros. Melee Dashboards - NorCal Region (Ongoing) </a> </p>
-      <p> <a href='./melee_map/index.html'>Where to find Super Smash Bros. Melee in Montreal</a> </p>
+  <h3> Elliot Tan </h3>
+  <div class="aboutMe">
+    <h4> <b><u>About Me</u></b></h4>
+    <p> I am a geospatial data analyst, with an academic background in climate change science, public health, and political science. During the course of my professional career, I have worked with various NGOs to help construct an open database made up of reports submitted by oil and gas companies to the Canadian and UK government under the ESTMA act. I am currently based in the San Francisco Bay area working as a GIS contractor on site at a major tech company. My interests primarily lay in data visualization and analysis, focusing on public transit and urban issues, as well as competitive video games. 
   </div>
-  <div class = "contact">
+   <div class="links">
+      <h4> <b><u>Projects and Practice</u></b></h4>
+      <p> <a href='./stl_app/index.html' target="_blank"> City of Laval STL Bus Locator</a> </p>
+  	  <p> <a href='./D3Practice/d3js_circlestack.html' target="_blank"> Create a stack of circles</a> </p>
+      <p> <a href ='./D3Practice/randomPieChart.html' target="_blank"> Pie chart with random values and colours</a></p>
+    	<p> <a href='./geog407_d3js/index.html' target="_blank"> GEOG 407 D3JS Demo </a> </p>
+      <p> <a href='./NRGI_projects/index.html' target="_blank"> Map of Oil and Gas extraction projects worldwide </a> </p>
+      <p> <a href='./meleeDashboards/norcal.html' target="_blank"> Super Smash Bros. Melee Dashboards - NorCal Region (Ongoing) </a> </p>
+      <p> <a href='./melee_map/index.html' target="_blank">Where to find Super Smash Bros. Melee in Montreal</a> </p>
+  </div>
+  <div class="contact">
      <a href='https://www.linkedin.com/in/elliot-tan-90a916116/'>
-        <img src = './dataFiles/linkedin.png'>
+        <img src='./dataFiles/linkedin.png'>
       </a>
-    <a href = './dataFiles/Resume.pdf'> Resume </a>
+    <a href='./dataFiles/Resume.pdf'> Resume</a>
 </body>
