--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   	  <p> <a href='./D3Practice/d3js_circlestack.html' target="_blank"> Create a stack of circles</a> </p>
       <p> <a href ='./D3Practice/randomPieChart.html' target="_blank"> Pie chart with random values and colours</a></p>
     	<p> <a href='./geog407_d3js/index.html' target="_blank"> GEOG 407 D3JS Demo </a> </p>
+      <p> <a href='./dataFiles/ENVR401_paper.pdf' target="_blank"> ENVR 401 Research Paper - GIS Analysis </a> </p>
       <p> <a href='./NRGI_projects/index.html' target="_blank"> Map of Oil and Gas extraction projects worldwide </a> </p>
       <p> <a href='./meleeDashboards/norcal.html' target="_blank"> Super Smash Bros. Melee Dashboards - NorCal Region (Ongoing) </a> </p>
       <p> <a href='./melee_map/index.html' target="_blank">Where to find Super Smash Bros. Melee in Montreal</a> </p>
